--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -3,13 +3,15 @@
 one:
   title: MyString
   summary: MyText
-  date: 2016-10-08 09:14:50
+  date: 2016-10-08 10:29:31
   status: false
   url: MyString
+  rssfeed_id: 1
 
 two:
   title: MyString
   summary: MyText
-  date: 2016-10-08 09:14:50
+  date: 2016-10-08 10:29:31
   status: false
   url: MyString
+  rssfeed_id: 1
